--- a/404.html
+++ b/404.html
@@ -64,10 +64,10 @@
 <body>
   <a href="index.html"><img src="https://i.imgur.com/yQLx6Xh.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="404.html">Our Location</a></li>
-    <li><a href="404.html">Our Products</a></li>
-    <li><a href="404.html">About Us</a></li>
-    <li><a href="404.html">Company Profile</a></li>
+    <li><a href="404">Our Location</a></li>
+    <li><a href="404">Our Products</a></li>
+    <li><a href="404">About Us</a></li>
+    <li><a href="404">Company Profile</a></li>
     <li><a class="back" href="index.html">Back</a></li>
   </ul>
   <br>
