--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
   <div style="clear:both;" class="navi">
   <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="404.html">Our Location</a></li>
-    <li><a href="404.html">Our Products</a></li>
-    <li><a href="404.html">About Us</a></li>
-    <li><a href="404.html">Company Profile</a></li>
+    <li><a href="404">Our Location</a></li>
+    <li><a href="404">Our Products</a></li>
+    <li><a href="404">About Us</a></li>
+    <li><a href="404">Company Profile</a></li>
   </ul>
   </div>
   <br>
