--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
   }
 </style>
 <body>
-  <a href="index.html"><img src="https://i.imgur.com/yQLx6Xh.png" alt="logo" style="width:10%;"></a>
+  <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
     <li><a href="404">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
