--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   }
   @font-face {
     font-family: "yey";
-    src: url("Louis George Cafe/Louis George Cafe.ttf");
+    src: url("Louis George Cafe.ttf");
   }
   @font-face {
     font-family: "yeyb";
-    src: url("Louis George Cafe/Louis George Cafe Bold.ttf");
+    src: url("Louis George Cafe Bold.ttf");
   }
   @font-face {
     font-family: "sugare";
