--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div style="clear:both;" class="navi">
   <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="404">Our Location</a></li>
+    <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
     <li><a href="404">About Us</a></li>
     <li><a href="404">Company Profile</a></li>
@@ -87,7 +87,6 @@
   <br>
   <br>
   <h1> Welcome to <div class="logo">KUL KUL</div>Currently this website is still under development. Please check our website regularly.</h1>
-  <br>
   <br>
   <br>
   <br>
