--- a/404.html
+++ b/404.html
@@ -71,11 +71,11 @@
   <div style="clear:both;" class="navi">
   <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="location.html">Our Location</a></li>
-    <li><a href="404.html">Our Products</a></li>
-    <li><a href="404.html">About Us</a></li>
-    <li><a href="404.html">Company Profile</a></li>
-    <li><a class="back" href="index.html">Back</a></li>
+    <li><a href="location">Our Location</a></li>
+    <li><a href="404">Our Products</a></li>
+    <li><a href="404">About Us</a></li>
+    <li><a href="404">Company Profile</a></li>
+    <li><a class="back" href="index">Back</a></li>
   </ul>
 </div>
   <br>
@@ -88,11 +88,14 @@
   <br>
   <br>
   <br>
-  <h1> Error
-    <br>
-    <br>
-    <div class="error">404</div>
-    <br>
-    Oh no! You just visited our page that's currently under development. Please check our website regularly.</h1>
-  </body>
-  </html>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1>Oh no! You just visited our page that's currently under development. Please check our website regularly.</h1>
+</body>
+</html>
