--- a/index.html
+++ b/index.html
@@ -45,19 +45,13 @@
     top: 0px;
     padding: 5px;
   }
-  .logo {
-    font-family: sugare;
-    font-size: 150px;
-    letter-spacing: 10px;
-    line-height: 70%;
-  }
   @font-face {
     font-family: "yey";
-    src: url("Louis George Cafe.ttf");
+    src: url("Louis George Cafe/Louis George Cafe.ttf");
   }
   @font-face {
     font-family: "yeyb";
-    src: url("Louis George Cafe Bold.ttf");
+    src: url("Louis George Cafe/Louis George Cafe Bold.ttf");
   }
   @font-face {
     font-family: "sugare";
@@ -86,7 +80,6 @@
   <br>
   <br>
   <br>
-  <h1> Welcome to <div class="logo">KUL KUL</div>Currently this website is still under development. Please check our website regularly.</h1>
   <br>
   <br>
   <br>
@@ -94,3 +87,13 @@
   <br>
   <br>
   <br>
+  <h1>Currently this website is still under development. Please check our website regularly.</h1>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+</body>
+</html>
