--- a/location.html
+++ b/location.html
@@ -41,6 +41,12 @@
     text-align: center;
     color: white;
     font-family: yey;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -9px;
   }
   .navi {
     position: -webkit-sticky;
