--- a/404.html
+++ b/404.html
@@ -41,7 +41,12 @@
     text-align: center;
     color: white;
     font-family: yey;
-    line-height: 40px;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -9px;
   }
   .navi {
     position: -webkit-sticky;
