--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     text-align: center;
     color: white;
     font-family: yey;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -9px;
   }
   .navi {
     position: -webkit-sticky;
@@ -68,32 +74,6 @@
     <li><a href="404">Company Profile</a></li>
   </ul>
   </div>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
   <h1>Currently this website is still under development. Please check our website regularly.</h1>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
 </body>
 </html>
