--- a/404.html
+++ b/404.html
@@ -8,11 +8,16 @@
 .back {
   background-color: #a7d5f2;
 }
-  ul {
-    list-style-type: none;
-    margin-right: 20px;
-    padding: 0;
-    overflow: hidden;
+  h1 {
+    text-align: center;
+    color: white;
+    font-family: yey;
+    vertical-align: middle;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin-top: -9px;
   }
   li {
     float: right;
