--- a/index.html
+++ b/index.html
@@ -3,70 +3,11 @@
 <head>
   <title>Kul Kul │ Home</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/806432746750083072/favicon_FC7_icon.ico"/>
+  <link rel="stylesheet" href="style.css">
 </head>
-<style>
-  ul {
-    list-style-type: none;
-    margin-right: 20px;
-    padding: 0;
-    overflow: hidden;
-  }
-  li {
-    float: right;
-  }
-  li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: yeyb;
-    font-size:15px;
-    background-color: white;
-  }
-  li a:hover {
-    background-color: #d4d4d4;
-  }
-  img {
-    float: left;
-  }
-  body {
-    font-family: yey;
-    background-image: url("https://imgur.com/EtGM3cm.jpg")
-  }
-  h1 {
-    text-align: center;
-    color: white;
-    font-family: yey;
-    vertical-align: middle;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    margin-top: -9px;
-  }
-  .navi {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    padding: 5px;
-  }
-  @font-face {
-    font-family: "yey";
-    src: url("Louis George Cafe.ttf");
-  }
-  @font-face {
-    font-family: "yeyb";
-    src: url("Louis George Cafe Bold.ttf");
-  }
-  @font-face {
-    font-family: "sugare";
-    src: url("SUGARE.ttf");
-  }
-</style>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
+  <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
     <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
