--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
+  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
     <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
