--- a/404.html
+++ b/404.html
@@ -3,17 +3,17 @@
 <head>
   <title>Kul Kul │ 404 Error!</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/806432746750083072/favicon_FC7_icon.ico"/>
-  <link rel"stylesheet" href="style404.css">
+  <link rel="stylesheet" href="style404.css">
 </head>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
+  <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="location">Our Location</a></li>
-    <li><a href="404">Our Products</a></li>
-    <li><a href="404">About Us</a></li>
-    <li><a href="404">Company Profile</a></li>
-    <li><a class="back" href="index">Back</a></li>
+    <li><a href="location.html">Our Location</a></li>
+    <li><a href="404.html">Our Products</a></li>
+    <li><a href="404.html">About Us</a></li>
+    <li><a href="404.html">Company Profile</a></li>
+    <li><a class="back" href="index.html">Back</a></li>
   </ul>
 </div>
   <h1>Oh no! You just visited our page that's currently under development. Please check our website regularly.</h1>
