--- a/404.html
+++ b/404.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
+  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="location.html">Our Location</a></li>
-    <li><a href="404.html">Our Products</a></li>
-    <li><a href="404.html">About Us</a></li>
-    <li><a href="404.html">Company Profile</a></li>
+    <li><a href="location">Our Location</a></li>
+    <li><a href="404">Our Products</a></li>
+    <li><a href="404">About Us</a></li>
+    <li><a href="404">Company Profile</a></li>
     <li><a class="back" href="index.html">Back</a></li>
   </ul>
 </div>
