--- a/company.html
+++ b/company.html
@@ -124,7 +124,7 @@
 <h3>MISSION</h3>
 <ul class="mission">
   <li>Serving refreshing food and beverages.</li>
-  <li>Making a viral trend where people can accept "weird" inovation while
+  <li>Making a viral trend where people can accept unique inovation while
       preserving Indonesia's authentic taste.</li>
   <li>Inovating products that consumers need without sacrificing quality.</li>
   <li>Always use top quality ingredient.</li>
