--- a/loc.html
+++ b/loc.html
@@ -68,7 +68,7 @@
     <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
     <li><a href="404">About Us</a></li>
-    <li><a href="404">Company Profile</a></li>
+    <li><a href="company">Company Profile</a></li>
     <li><a class="back" href="index">Back</a></li>
   </ul>
   </div>
