--- a/loc.html
+++ b/loc.html
@@ -65,7 +65,7 @@
   <div style="clear:both;" class="navi">
   <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="location">Our Location</a></li>
+    <li><a href="loc">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
     <li><a href="404">About Us</a></li>
     <li><a href="company">Company Profile</a></li>
