--- a/company.html
+++ b/company.html
@@ -59,8 +59,9 @@
   h3 {
     text-align: center;
     color: black;
-    font-size: 40px;
+    font-size: 35px;
     font-family: yeyb;
+    letter-spacing: 20px;
   }
   .philo {
     font-size: 25px;
