--- a/company.html
+++ b/company.html
@@ -117,7 +117,7 @@
 <br>
 <br>
 <br>
-<h3>WHAT IS <span>KUL KUL</span></h3>
+<h3>WHAT IS KUL KUL?</h3>
 <h1><span>KUL KUL</span> is a food and beverages company that focuses on bringing freshness towards the community in a unique way while preserving Indonesia's authentic taste on our products.</h1>
 <h3>VISION</h3>
 <h1>Made a online-based culinary company with Indonesia recognized quality ingredient.</h1>
