--- a/company.html
+++ b/company.html
@@ -60,7 +60,7 @@
     text-align: center;
     color: black;
     font-size: 35px;
-    font-family: yeyb;
+    font-family: yey;
     letter-spacing: 20px;
   }
   .philo {
