--- a/company.html
+++ b/company.html
@@ -11,6 +11,50 @@
   body {
     -ms-overflow-style: none;
     scrollbar-width: none;
+    font-family: Louis;
+    background-image: url(https://i.imgur.com/2HpvGjb.png);
+  }
+  span {
+    font-size:60px;
+    font-family: sugare;
+    letter-spacing: 5px;
+    line-height: 0px;
+  }
+  h1 {
+    text-align: center;
+    font-size: 35px;
+    font-family: Louis;
+    letter-spacing: 15px;
+  }
+  h2 {
+    text-align: center;
+    color: white;
+    font-size: 25px;
+  }
+  h3 {
+    text-align: center;
+    font-size: 25px;
+    text-align: center;
+    font-family: Louisb;
+  }
+  .navi {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    padding: 5px;
+  }
+  .navi .back {
+    background-color: #a7d5f2;
+  }
+  .philos {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .mission {
+    color: white;
+    font-size: 25px;
+    font-family: Louisb;
   }
   .navi ul {
     list-style-type: none;
@@ -27,71 +71,22 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-family: yeyb;
+    font-family: Louisb;
     font-size:15px;
     background-color: white;
   }
   .navi li a:hover {
     background-color: #d4d4d4;
   }
-  .logo {
+  .navi img {
     float: left;
   }
-  body {
-    font-family: yeyb;
-    background-image: url(https://i.imgur.com/2HpvGjb.png);
-  }
-  span {
-    font-size:70px;
-    font-family: sugare;
-    letter-spacing: 5px;
-    line-height: 0px;
-  }
-  h1 {
-    text-align: center;
-    color: white;
-  }
-  h2 {
-    text-align: center;
-    color: white;
-    font-size: 30px;
-  }
-  h3 {
-    text-align: center;
-    color: black;
-    font-size: 35px;
-    font-family: yey;
-    letter-spacing: 20px;
-  }
-  .philo {
-    font-size: 25px;
-    text-align: center;
-  }
-  .navi {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0px;
-    padding: 5px;
-  }
-  .back {
-    background-color: #a7d5f2;
-  }
-  .philos {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .mission {
-    color: white;
-    font-size: 30px;
-    font-family: yeyb;
-  }
     @font-face {
-      font-family: "yey";
+      font-family: "Louis";
       src: url("Louis George Cafe.ttf");
     }
     @font-face {
-      font-family: "yeyb";
+      font-family: "Louisb";
       src: url("Louis George Cafe Bold.ttf");
     }
     @font-face {
@@ -101,9 +96,9 @@
 </style>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index"><img src="https://i.imgur.com/noXauyT.png" class="logo" style="width:10%;"></a>
+  <a href="index"><img src="https://i.imgur.com/noXauyT.png" style="width:10%;"></a>
   <ul>
-    <li><a href="loc">Our Location</a></li>
+    <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
     <li><a href="404">About Us</a></li>
     <li><a href="company">Company Profile</a></li>
@@ -114,14 +109,12 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<h3>WHAT IS KUL KUL?</h3>
-<h1><span>KUL KUL</span> is a food and beverages company that focuses on bringing freshness towards the community in a unique way while preserving Indonesia's authentic taste on our products.</h1>
-<h3>VISION</h3>
-<h1>Made a online-based culinary company with Indonesia recognized quality ingredient.</h1>
-<h3>MISSION</h3>
+<h1>WHAT IS KUL KUL?</h1>
+<h2><span>KUL KUL</span> is a food and beverages company that focuses on bringing freshness towards
+  the community in a unique way while preserving Indonesia's authentic taste on our products.</h2>
+<h1>VISION</h1>
+<h2>Made a online-based culinary company with Indonesia recognized quality ingredient.</h2>
+<h1>MISSION</h1>
 <ul class="mission">
   <li>Serving refreshing food and beverages.</li>
   <li>Making a viral trend where people can accept unique inovation while
@@ -130,16 +123,16 @@
   <li>Always use top quality ingredient.</li>
   <li>Make a healthy and nutrious foods or drinks that everyone can enjoy.</li>
 </ul>
-<h3>LOGO PHILOSOPHY</h3>
- <img src="https://i.imgur.com/F9nh7DC.png" width="28%" class="philos">
-  <h4 class="philo">Iceberg represents freshness that we try to deliver to you through our products.
-   <br>With five different colors representing our company member</h4>
- <img src="https://i.imgur.com/Umrm9MJ.png" width="33%" class="philos">
-  <h5 class="philo">Kul Kul is a pun for the word "cool", indicating that
+<h1>LOGO PHILOSOPHY</h1>
+ <img src="https://i.imgur.com/F9nh7DC.png" width="275px" class="philos">
+  <h3 class="philo">Iceberg represents freshness that we try to deliver to you through our products.
+   <br>With five different colors representing our company member</h3>
+ <img src="https://i.imgur.com/Umrm9MJ.png" width="275px" class="philos">
+  <h3 class="philo">Kul Kul is a pun for the word "cool", indicating that
    <br>we want to give you the pleasing cool sensation when
-   <br>you eat or drink our products.</h5>
- <img src="https://i.imgur.com/kMssKRH.png" width="28%" class="philos">
-  <h6 class="philo">Mangkok Ayam Jago represents Indonesian's authentic taste exists
-    <br>on our products.</h6>
+   <br>you eat or drink our products.</h3>
+ <img src="https://i.imgur.com/kMssKRH.png" width="275px" class="philos">
+  <h3 class="philo">Mangkok Ayam Jago represents Indonesian's authentic taste exists
+    <br>on our products.</h3>
 </body>
 </html>
