--- a/loc.html
+++ b/loc.html
@@ -5,42 +5,17 @@
   <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/806432746750083072/favicon_FC7_icon.ico"/>
 </head>
 <style>
-  .back {
-    background-color: #a7d5f2;
-  }
-  ul {
-    list-style-type: none;
-    margin-right: 20px;
-    padding: 0;
-    overflow: hidden;
-  }
-  li {
-    float: right;
-  }
-  li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: yeyb;
-    font-size:15px;
-    background-color: white;
-  }
-  li a:hover {
-    background-color: #d4d4d4;
-  }
-  img {
-    float: left;
-  }
+  body::-webkit-scrollbar {
+   display: none;
+ }
   body {
-    font-family: yey;
-    background-image: url("https://i.imgur.com/2HpvGjb.png")
-  }
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+   background-image: url("https://i.imgur.com/2HpvGjb.png")
+ }
   h1 {
     text-align: center;
-    color: white;
-    font-family: yey;
+    font-family: Louis;
   }
   .navi {
     position: -webkit-sticky;
@@ -48,12 +23,40 @@
     top: 0px;
     padding: 5px;
   }
+  .navi .back {
+    background-color: #a7d5f2;
+  }
+  .navi ul {
+     list-style-type: none;
+     margin-right: 20px;
+     padding: 0;
+     overflow: hidden;
+   }
+  .navi li {
+    float: right;
+  }
+  .navi li a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Louisb;
+    font-size:15px;
+    background-color: white;
+  }
+  .navi li a:hover {
+    background-color: #d4d4d4;
+  }
+  .navi img {
+    float: left;
+  }
   @font-face {
-    font-family: "yey";
+    font-family: "Louis";
     src: url("Louis George Cafe.ttf");
   }
   @font-face {
-    font-family: "yeyb";
+    font-family: "Louisb";
     src: url("Louis George Cafe Bold.ttf");
   }
   @font-face {
@@ -65,7 +68,7 @@
   <div style="clear:both;" class="navi">
   <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
   <ul>
-    <li><a href="loc">Our Location</a></li>
+    <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
     <li><a href="404">About Us</a></li>
     <li><a href="company">Company Profile</a></li>
