--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
 </style>
 <body>
   <div style="clear:both;" class="navi">
-  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:10%;"></a>
+  <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:125px;"></a>
   <ul>
     <li><a href="location">Our Location</a></li>
     <li><a href="404">Our Products</a></li>
