--- a/location.html
+++ b/location.html
@@ -15,7 +15,9 @@
  }
   h1 {
     text-align: center;
+    font-size: 35px;
     font-family: Louis;
+    letter-spacing: 15px;
   }
   .navi {
     position: -webkit-sticky;
