--- a/location.html
+++ b/location.html
@@ -17,7 +17,7 @@
     text-align: center;
     font-size: 35px;
     font-family: Louis;
-    letter-spacing: 15px;
+    letter-spacing: 5px;
   }
   .navi {
     position: -webkit-sticky;
@@ -79,7 +79,7 @@
   </div>
   <br>
   <br>
-  <h1> Where are we?</h1>
+  <h1> WHERE ARE WE?</h1>
   <iframe width="100%" height="395" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=SMAN%2071%20Jakarta+(Kul%20Kul)&amp;t=&amp;z=19&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
 </body>
 </html>
