--- a/company.html
+++ b/company.html
@@ -44,7 +44,7 @@
     padding: 5px;
   }
   .navi .back {
-    background-color: #a7d5f2;
+    background-color: #ffbe4d;
   }
   .philos {
     display: block;
@@ -113,7 +113,7 @@
 <h2><span>KUL KUL</span> is a food and beverages company that focuses on bringing freshness towards
   the community in a unique way while preserving Indonesia's authentic taste on our products.</h2>
 <h1>VISION</h1>
-<h2>Made a online-based culinary company with Indonesia recognized quality ingredient.</h2>
+<h2>Make an online-based culinary company with Indonesia recognized quality ingredient.</h2>
 <h1>MISSION</h1>
 <ul class="mission">
   <li>Serving refreshing food and beverages.</li>
