--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
    padding: 5px;
  }
  .navi .back {
-   background-color: #a7d5f2;
+   background-color: #ffbe4d;
  }
  .navi ul {
    list-style-type: none;
