--- a/company.html
+++ b/company.html
@@ -44,7 +44,7 @@
     padding: 5px;
   }
   .navi .back {
-    background-color: #ffbe4d;
+    background-color: #a7d5f2;
   }
   .philos {
     display: block;
