--- a/404.html
+++ b/404.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kul Kul │ 404 Error</title>
+  <title>Kul Kul │ Home</title>
   <link rel="icon" href="https://cdn.discordapp.com/attachments/794187409352687636/806432746750083072/favicon_FC7_icon.ico"/>
 </head>
 <style>
  body::-webkit-scrollbar {
    display: none;
  }
+ html, body {
+    margin:0;
+    padding:0;
+    height:100%;
+ }
  body {
    -ms-overflow-style: none;
    scrollbar-width: none;
-   background-image: url(https://i.imgur.com/UwT240f.jpg)
+   background-image: url("https://i.imgur.com/UwT240f.jpg");
+   min-height:100%;
+   position:relative;
+   padding-bottom:140px;
  }
  h1 {
    text-align: center;
@@ -22,25 +30,32 @@
    top: 50%;
    left: 0;
    right: 0;
-   margin-top: -9px;
+   margin-top: -150px;
  }
+ footer {
+  position:absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  font-family: Louis;
+  height:140px;
+  background:#a3a3a3;
+}
  .navi {
    position: -webkit-sticky;
    position: sticky;
    top: 0px;
    padding: 5px;
- }
- .navi .back {
-   background-color: #ffbe4d;
+   z-index: 2;
  }
  .navi ul {
-   list-style-type: none;
-   margin-right: 20px;
-   padding: 0;
-   overflow: hidden;
+    list-style-type: none;
+    margin-right: 20px;
+    padding: 0;
+    overflow: hidden;
  }
  .navi li {
-   float: right;
+    float: right;
  }
  .navi li a {
    display: block;
@@ -50,7 +65,7 @@
    text-decoration: none;
    font-family: Louisb;
    font-size:15px;
-  background-color: white;
+   background-color: white;
  }
  .navi li a:hover {
    background-color: #d4d4d4;
@@ -58,30 +73,60 @@
  .navi img {
    float: left;
  }
-  @font-face {
-    font-family: "Louis";
-    src: url("Louis George Cafe.ttf");
-  }
-  @font-face {
-    font-family: "Louisb";
-    src: url("Louis George Cafe Bold.ttf");
-  }
-  @font-face {
-    font-family: "sugare";
-    src: url("SUGARE.ttf");
-  }
+ .button {
+   width: 200px;
+   text-align: center;
+   color: white;
+   font-family: Louis;
+   vertical-align: middle;
+   position: absolute;
+   top: 45%;
+   left: 40%;
+   margin-top: 100px;
+   text-decoration: none;
+   font-size: 25px;
+   border-style: solid;
+   border-radius: 10px;
+ }
+ .left-part {
+   position: absolute;
+   left: 1%;
+   top: 3px;
+ }
+ @font-face {
+   font-family: "Louis";
+   src: url("Louis George Cafe.ttf");
+ }
+ @font-face {
+   font-family: "Louisb";
+   src: url("Louis George Cafe Bold.ttf");
+ }
+ @font-face {
+   font-family: "sugare";
+   src: url("SUGARE.ttf");
+ }
 </style>
 <body>
   <div style="clear:both;" class="navi">
   <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:125px;"></a>
   <ul>
-    <li><a href="location">Our Location</a></li>
-    <li><a href="404">Our Products</a></li>
-    <li><a href="404">About Us</a></li>
-    <li><a href="company">Company Profile</a></li>
-    <li><a class="back" href="index">Back</a></li>
+    <li><a href="location.en">Our Location</a></li>
+    <li><a href="products.en">Our Products</a></li>
+    <li><a href="about.en">About Us</a></li>
+    <li><a href="company.en">Company Profile</a></li>
   </ul>
-</div>
-  <h1>Oh no! You just visited our page that's currently under development. Please check our website regularly.</h1>
+  </div>
+  <h1>Oh no! You just visited the wrong page, maybe you mistyped it. Please check your spelling.
+  <br>
+  ------------------------------------------------------------------------------------------
+  <br>
+  Oh tidak! Kamu baru saja membuka laman yang salah, mungkin kamu salah ketik.
+  <br>Tolong dicek lagi ejaannya.</h1>
+  <br>
+  <a href="index" class="button">Take me home</a>
+  <footer>
+    <div class="left-part"><img src="https://i.imgur.com/bwfrpwi.png" width="290px">
+      <br>2021. This project is created solely for a school assignment.</div>
+  </footer>
 </body>
 </html>
