--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 footer a {
   color: white;
 }
+video {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+}
  .navi {
    position: -webkit-sticky;
    position: sticky;
@@ -105,6 +111,9 @@ footer a {
  }
 </style>
 <body>
+  <video autoplay muted loop id="myVideo">
+  <source src="https://cdn.discordapp.com/attachments/794187409352687636/807877907602473010/Untitled-1.mp4" type="video/mp4">
+</video>
   <div style="clear:both;" class="navi">
   <a href="index"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:125px;"></a>
   <ul>
