--- a/about.en.html
+++ b/about.en.html
@@ -177,8 +177,8 @@
 <br>
 <div class="member">
 <div class="arul"><img src="arul.png">
-  <br>Alazdha Amsyarul Hakim
-  <br><b>sebagai</b> Pembuat Laporan</div>
+  <br>Alzafdha Amsyarul Hakim
+  <br><b>as</b> Pembuat Laporan</div>
   <div class="farah"><img src="arul.png">
     <br>Farah Aura Rosadi
     <br><b>as</b> Web Developer</div>
