--- a/index.id.html
+++ b/index.id.html
@@ -117,10 +117,10 @@
   <div style="clear:both;" class="navi">
   <a href="index.id.html"><img src="https://i.imgur.com/noXauyT.png" alt="logo" style="width:125px;"></a>
   <ul>
-    <li><a href="loc.id.html">Lokasi</a></li>
-    <li><a href="products.id.html">Produk</a></li>
-    <li><a href="about.id.html">Tentang Kami</a></li>
-    <li><a href="company.id.html">Profil Perusahaan</a></li>
+    <li><a href="location.id">Lokasi</a></li>
+    <li><a href="products.id">Produk</a></li>
+    <li><a href="about.id">Tentang Kami</a></li>
+    <li><a href="company.id">Profil Perusahaan</a></li>
   </ul>
   </div>
   <footer>
