--- a/about.en.html
+++ b/about.en.html
@@ -112,12 +112,12 @@
    position: relative;
    left: 100px;
  }
- .farah {
+ .farhan {
    position: relative;
    top: -90px;
    left: 500px
  }
- .farhan {
+ .farah {
    position: relative;
    top: -180px;
    left: 900px;
@@ -179,12 +179,13 @@
 <div class="arul"><img src="arul.png">
   <br>Alzafdha Amsyarul Hakim
   <br><b>as</b> Pembuat Laporan</div>
-  <div class="farah"><img src="arul.png">
-    <br>Farah Aura Rosadi
-    <br><b>as</b> Web Developer</div>
   <div class="farhan"><img src="farhan.png">
     <br>Farhan Ardia Nashwan
-    <br><b>as</b> Graphic Designer</div>
+    <br><b>as</b> Web Developer
+    <br>and Graphic Designer.</div>
+  <div class="farah"><img src="farah.png">
+    <br>Farah Aura Rosadi
+    <br><b>as</b> Web Designer</div>
   <div class="golda"><img src="golda.png">
     <br>Golda Clarabella Salazar
     <br><b>as</b> Content Creator</div>
