--- a/company.id.html
+++ b/company.id.html
@@ -240,8 +240,8 @@
    <br>menandakan bahwa kami ingin memberikan sensasi
    <br>dingin ketika kamu mengonsumsi produk kami.</div>
   <div class="bowl"><img src="https://i.imgur.com/QnvAKAA.png" width="275px">
-    <br><b>Mangkok Ayam Jago</b> represents Indonesian's
-    <br>authentic taste exists on our products.</div>
+    <br><b>Mangkok Ayam Jago</b> melambangkan cita rasa
+    <br>lokal yang terdapat di produk kami.</div>
  </div>
 </body>
 <footer>
