--- a/about.en.html
+++ b/about.en.html
@@ -119,7 +119,7 @@
  }
  .farah {
    position: relative;
-   top: -180px;
+   top: -200px;
    left: 900px;
  }
  .golda {
@@ -182,10 +182,10 @@
   <div class="farhan"><img src="farhan.png">
     <br>Farhan Ardia Nashwan
     <br><b>as</b> Web Developer
-    <br>and Graphic Designer.</div>
+    <br><b>and</b> Graphic Designer</div>
   <div class="farah"><img src="farah.png">
     <br>Farah Aura Rosadi
-    <br><b>as</b> Web Designer</div>
+    <br><b>as</b> Web Developer</div>
   <div class="golda"><img src="golda.png">
     <br>Golda Clarabella Salazar
     <br><b>as</b> Content Creator</div>
