--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ footer {
     poster="https://i.pinimg.com/originals/01/21/60/0121603949e5107693615943b1795ce8.jpg"
     data-setup="{}"
   >
-    <source src="https://gma2.blab.email/fs2.m3u8" type="application/x-mpegURL" />
+    <source src="http://31.220.41.90:8081/live/fr-beinsport1.stream/chunks.m3u8" type="application/x-mpegURL" />
     <p class="vjs-no-js">
       <a href="https://videojs.com/html5-video-support/" target="_blank"></a>
     </p>
